--- a/Brand/Design.html
+++ b/Brand/Design.html
@@ -121,7 +121,7 @@
     </div>
   </nav>
 
-  <img src="" alt="">
+  <img src="img/design/1.png" width="100%">
   <br>
   
   <div  class="container">
@@ -131,7 +131,7 @@
       Lamborghini's cars were conceived to thrill not only the drivers, but also the people around as they went past. A concept that has always been a keystone of the iconic car manufacturer, and over the years it has been developed hand in hand with the general evolution of style and technological progress.</p>
     </div>
   </div>
-  <img src="" alt="">
+  <img src="img/design/2.png" alt="">
   <div class="container">
     <div class="col-md-9" style="margin: 0 auto;">
       <h3 class="tengah"><b>PERFECTION</b> IS ESSENTIAL</h3>
@@ -140,6 +140,7 @@
     </div>
   </div>
   
+  <img src="img/design/4.png" width="100%">
   <br><br><br>
 
   <div class="container">
@@ -150,14 +151,14 @@
     </div>
   </div>
 
-  <img src="" alt="">
+  <img src="img/design/3.png" width="100%">
   <footer class="footer">
     <div class="container bottom_border">
       <div class="row">
         <div class=" col-md-4">
           <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
           <ul class="footer_ul_amrc">
-            <li><a href="#">Urus</a></li>
+            <li><a href="../Models/Urus.html">Urus</a></li>
             <li><a href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
             <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
             <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
@@ -194,7 +195,7 @@
       <li><a href="#">Motorsport</a></li>
       <li><a href="#">History</a></li>
       </ul>
-      <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+      <p class="text-center">Copyright @2019 | Designed With by <a href="../Profil/Profil.html">Gorosei Company</a></p>
     </div>
   </footer>
 
