--- a/Brand/Ferruccio.html
+++ b/Brand/Ferruccio.html
@@ -186,7 +186,7 @@
       <br>
   </div> <!-- end container -->
 
-  <img src="img/Ferruccio/Untitled-7.png" alt="">
+  <img src="img/Ferruccio/Untitled-7.png" width="100%">
 
   <br><br>
 
@@ -233,7 +233,7 @@
       <li><a href="#">Motorsport</a></li>
       <li><a href="#">History</a></li>
       </ul>
-      <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+      <p class="text-center">Copyright @2017 | Designed With by <a href="../Profil/Profil.html">Gorosei Company</a></p>
     </div>
   </footer>
 
