--- a/History/History.html
+++ b/History/History.html
@@ -117,109 +117,91 @@
 	    </form>
 	  </div>
 	</nav>	
-
-	<div class="row berita ">
-		<div class="col-md-2 ">
-			<ul style="list-style: none;">
-				<li><a onclick="load1963()">1963-1964</a></li>
-				<li><a onclick="load1965()">1965-1966</a></li>
-				<li><a onclick="load1967()">1967-1968</a></li>
-				<li><a onclick="load1969()">1969-1971</a></li>
-				<li><a onclick="load1972()">1972-1973</a></li>
-				<li><a onclick="load1974()">1974-1977</a></li>
-				<li><a onclick="load1978()">1978-1980</a></li>
-				<li><a onclick="load1981()">1981-1983</a></li>
-				<li><a onclick="load1984()">1984-1986</a></li>
-				<li><a onclick="load1987()">1987-1990</a></li>
-				<li><a onclick="load1991()">1991-1993</a></li>
-				<li><a onclick="load1994()">1994-1997</a></li>
-				<li><a onclick="load1998()">1998-2004</a></li>
-				<li><a onclick="load2005()">2005-2007</a></li>
-				<li><a onclick="load2008()">2008-2013</a></li>
-				<li><a onclick="load2014()">2014-TODAY</a></li>
-			</ul>
-		</div>
-		<div class="col-md-9">
-			<div class="row" >
-				<div class="col-md-6" style="background: green;">
-					<img id="foto" src="" alt="">
-				</div>
-				<div class="col-md-6 berita" id="demo" style="background: blue;">
-					<p style="overflow-y: scroll; height: 300px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-				</div>
-			</div>		
-		</div>
+	
+	<div class="bg-image">
 	</div>
+		<div class="row berita ">
+			<div class="col-md-2 ">
+				<ul style="list-style: none;">
+					<li><a onclick="load1963()">1963-1964</a></li>
+					<li><a onclick="load1965()">1965-1966</a></li>
+					<li><a onclick="load1967()">1967-1968</a></li>
+					<li><a onclick="load1969()">1969-1971</a></li>
+					<li><a onclick="load1972()">1972-1973</a></li>
+					<li><a onclick="load1974()">1974-1977</a></li>
+					<li><a onclick="load1978()">1978-1980</a></li>
+					<li><a onclick="load1981()">1981-1983</a></li>
+					<li><a onclick="load1984()">1984-1986</a></li>
+					<li><a onclick="load1987()">1987-1990</a></li>
+					<li><a onclick="load1991()">1991-1993</a></li>
+					<li><a onclick="load1994()">1994-1997</a></li>
+					<li><a onclick="load1998()">1998-2004</a></li>
+					<li><a onclick="load2005()">2005-2007</a></li>
+					<li><a onclick="load2008()">2008-2013</a></li>
+					<li><a onclick="load2014()">2014-TODAY</a></li>
+				</ul>
+			</div>
+			<div class="col-md-9">
+				<div class="row" >
+					<div class="col-md-6" style="background: green;">
+						<img id="foto" src="" alt="">
+					</div>
+					<div class="col-md-6 berita" id="demo">
+						<p style="overflow-y: scroll; height: 300px;">
+							The history of ‘Lamborghini Automobili’ officially starts in 1963. Nevertheless, we must consider the far-off roots of this event, and they are the roots of Ferruccio Lamborghini. Born in 1916, this capable, impetuous, strong-willed Taurus was the leading character in the foundation of the company and the early phases of its extraordinary history.
+					</p>
+					</div>
+				</div>		
+			</div>
+		</div>
+	
 
 	<footer class="footer">
-		<div class="container bottom_border">
-	    <div class="row">
-	    	<div class=" col-md-4">
-	    		<h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
-		      <ul class="footer_ul_amrc">
-		      <li><a href="../Models/Urus.html">Urus</a></li>
-		      <li><a href="../Models/Huracan_EVO.html">Hucaran EVO</a></li>
-		      <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
-		      <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
-		      <li><a href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
-		      </ul>
-	    	</div>
-
-		    <div class=" col-md-4">
-		    	<h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
-		      <ul class="footer_ul_amrc">
-		        <li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
-		        <li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
-		        <li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
-		        <li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
-		        <li><a href="../Brand/Design.html">Design</a></li>
-		      </ul>
-		    </div>
-
-		    <div class=" col-md-4">
-		      <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
-		      <ul class="footer_ul_amrc">
-		        <li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
-		        <li><a href="../Ownership/Service.html">Service Locator</a></li>
-		        <li><a href="../Ownership/Center.html">Coullisin Center</a></li>
-		        <li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
-		        <li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
-		      </ul>
-		    </div>
-	        
-	    </div>
-	  </div>
-
-
-	  <div class="container">
-	    <ul class="foote_bottom_ul_amrc">
-		    <li><a href="#">Models</a></li>
-		    <li><a href="#">Brand</a></li>
-		    <li><a href="#">Ownership</a></li>
-		    <li><a href="../Motorsport/Motorsport.html">Motorsport</a></li>
-		    <li><a href="../History/History.html">History</a></li>
-	    </ul>
-	    <p class="text-center">Copyright @2017 | Designed With by <a href="#">GOROSEI Company</a></p>
-	    <!-- <ul class="social_footer_ul">
-		    <li><a href="http://webenlance.com"><i class="fab fa-facebook-f"></i></a></li>
-		    <li><a href="http://webenlance.com"><i class="fab fa-twitter"></i></a></li>
-		    <li><a href="http://webenlance.com"><i class="fab fa-linkedin"></i></a></li>
-		    <li><a href="http://webenlance.com"><i class="fab fa-instagram"></i></a></li>
-	    </ul> -->
-		</div>
-	</footer>
+    <div class="container bottom_border">
+      <div class="row">
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Models/Urus.html">Urus</a></li>
+            <li><a href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
+            <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
+            <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
+            <li><a href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
+          </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
+            <ul class="footer_ul_amrc">
+              <li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
+              <li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+              <li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+              <li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
+              <li><a href="../Brand/Design.html">Design</a></li>
+            </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
+            <li><a href="../Ownership/Service.html">Service Locator</a></li>
+            <li><a href="../Ownership/Center.html">Coullisin Center</a></li>
+            <li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
+            <li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
+          </ul>
+        </div>  
+      </div>
+    </div>
+    <div class="container">
+      <ul class="foote_bottom_ul_amrc">
+      <li><a href="#">Models</a></li>
+      <li><a href="#">Brand</a></li>
+      <li><a href="#">Ownership</a></li>
+      <li><a href="#">Motorsport</a></li>
+      <li><a href="#">History</a></li>
+      </ul>
+      <p class="text-center">Copyright @2019 | Designed With by <a href="../Profil/Profil.html">Gorosei Company</a></p>
+    </div>
+  </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
