--- a/Ownership/Accessori.html
+++ b/Ownership/Accessori.html
@@ -191,7 +191,7 @@
       <li><a href="#">Motorsport</a></li>
       <li><a href="#">History</a></li>
       </ul>
-      <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+      <p class="text-center">Copyright @2019 | Designed With by <a href="#">Gorosei Company</a></p>
     </div>
   </footer>
 
