--- a/Ownership/Center.html
+++ b/Ownership/Center.html
@@ -116,17 +116,22 @@
         </form>
     </div>
   </nav>
+  
+  <img src="img/store/jkt.png" width="100%">
 
-  <div>
-    <h2><b>SERVICE</b> LOCATOR</h2>
+  <br>
+
+  <div class="container">
+    <h2 style="text-align: center;"><b>SERVICE</b> LOCATOR</h2>
     <p>
       Automobili Lamborghini operates all over the world with over 150 assistance centers in more than 54 countries to provide you with total support whenever and wherever you need it. Find your nearest center.
     </p>
   </div>
+  
+  <br>
 
-
-  <div>
-    <h2><b>ACCESSORIES</b> AND SERVICES</h2>
+  <div class="container">
+    <h2 style="text-align: center;"><b>ACCESSORIES</b> AND SERVICES</h2>
     <p>
       The original accessories by Automobili Lamborghini are specially crafted to help you take the most optimal care of your Lamborghini, as well as to give it a special touch that makes it even more unique. Based on your needs, you'll be able to choose from a wide range of safety, care, interior, exterior, sports and multimedia accessories.
     </p>
@@ -135,17 +140,9 @@
     </p>
   </div>
 
-  <div class="container" style="background: brown">
-    <div class="row " style="position: absolute; margin-left: : auto; margin-right: auto;">
-      <div style="background: red; height: 300px; width: 300px; margin: 8px;">
-        
-      </div>
-      <div style="background: blue; height: 300px; width: 300px;margin: 8px;">
-        adad
-      </div>
-      <div style="background: green; height: 300px; width: 300px;margin: 8px;">
-        asdad
-      </div>
+  <div class="mapouter">
+    <div class="gmap_canvas">
+      <iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=lamborghini%20london&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
   </div>
   
