--- a/Ownership/Sparepart.html
+++ b/Ownership/Sparepart.html
@@ -162,83 +162,50 @@
 
 
 
-    <footer class="footer">
+  <footer class="footer">
     <div class="container bottom_border">
-    <div class="row">
-    <div class=" col-md-3">
-    <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
-    <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-      <li><a href="#">Urus</a></li>
-      <li><a href="#">Hucaran EVO</a></li>
-      <li><a href="#">Huracan RWD</a></li>
-      <li><a href="#">Aventador S</a></li>
-      <li><a href="#">Aventador SVJ</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
+      <div class="row">
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Models/Urus.html">Urus</a></li>
+            <li><a href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
+            <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
+            <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
+            <li><a href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
+          </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
+            <ul class="footer_ul_amrc">
+              <li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
+              <li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+              <li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+              <li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
+              <li><a href="../Brand/Design.html">Design</a></li>
+            </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
+            <li><a href="../Ownership/Service.html">Service Locator</a></li>
+            <li><a href="../Ownership/Center.html">Coullisin Center</a></li>
+            <li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
+            <li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
+          </ul>
+        </div>  
+      </div>
     </div>
-
-    <div class=" col-md-3">
-    <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
-    <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-        <li><a href="#">Ferruccio Lamborghini</a></li>
-        <li><a href="#">Marcello Gandhini</a></li>
-        <li><a href="#">Giampaolo Dallara</a></li>
-        <li><a href="#">Masterpieces</a></li>
-        <li><a href="#">Design</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
-    </div>
-
-    <div class=" col-md-3">
-      <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
-      <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-        <li><a href="#">Dealer Locator</a></li>
-        <li><a href="#">Service Locator</a></li>
-        <li><a href="#">Coullisin Center</a></li>
-        <li><a href="#">Sparepart</a></li>
-        <li><a href="#">Accessori Originali</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
-    </div>
-      
-    <div class=" col-md-3">
-      <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
-      <!--headin5_amrc-->
-      <ul class="footer_ul_amrc">
-        <li><a href="#">Dealer Locator</a></li>
-        <li><a href="#">Service Locator</a></li>
-        <li><a href="#">Coullisin Center</a></li>
-        <li><a href="#">Sparepart</a></li>
-        <li><a href="#">Accessori Originali</a></li>
-      </ul>
-    <!--footer_ul_amrc ends here-->
-    </div>  
-
-    </div>
-    </div>
-
-
     <div class="container">
-    <ul class="foote_bottom_ul_amrc">
-    <li><a href="#">Models</a></li>
-    <li><a href="#">Brand</a></li>
-    <li><a href="#">Ownership</a></li>
-    <li><a href="#">Motorsport</a></li>
-    <li><a href="#">History</a></li>
-    </ul>
-    <!--foote_bottom_ul_amrc ends here-->
-    <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
-
-    <!-- <ul class="social_footer_ul">
-    <li><a href="http://webenlance.com"><i class="fab fa-facebook-f"></i></a></li>
-    <li><a href="http://webenlance.com"><i class="fab fa-twitter"></i></a></li>
-    <li><a href="http://webenlance.com"><i class="fab fa-linkedin"></i></a></li>
-    <li><a href="http://webenlance.com"><i class="fab fa-instagram"></i></a></li>
-    </ul> -->
-    <!--social_footer_ul ends here-->
+      <ul class="foote_bottom_ul_amrc">
+      <li><a href="#">Models</a></li>
+      <li><a href="#">Brand</a></li>
+      <li><a href="#">Ownership</a></li>
+      <li><a href="#">Motorsport</a></li>
+      <li><a href="#">History</a></li>
+      </ul>
+      <p class="text-center">Copyright @2019 | Designed With by <a href="#">Gorosei Company</a></p>
     </div>
   </footer>
 
