--- a/Profil/Profil.html
+++ b/Profil/Profil.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
     <link rel="stylesheet" type="text/css" href="profil.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../css/footer.css">
     <link rel="stylesheet" type="text/css" href="../css/custom.css">
 
 </head>
@@ -33,21 +34,21 @@
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <!-- URUS -->
-            <li><a class="dropdown-item" href="#">Urus</a></li>
+            <li><a class="dropdown-item" href="../Models/Urus.html">Urus</a></li>
             <!-- HURACAN -->
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Huracan<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Huracan_EVO.html">Huracan EVO</a></li>
-                <li><a class="dropdown-item" href="Huracan_RWD.html">Huracan RWD</a></li>
+                <li><a class="dropdown-item" href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
+                <li><a class="dropdown-item" href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
               </ul>
             </li>
             <!-- AVENTADOR -->
             <li class="dropdown-submenu dropright">
               <a class="dropdown-item test dropdown-toggle" href="#">Aventador<span class="caret"></span></a>
               <ul class="dropdown-menu dropright" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="Aventador_S.html">Aventador S</a></li>
-                <li><a class="dropdown-item" href="Aventador_SVJ.html">Aventador SVJ</a></li>
+                <li><a class="dropdown-item" href="../Models/Aventador_S.html">Aventador S</a></li>
+                <li><a class="dropdown-item" href="../Models/Aventador_SVJ.html">Aventador SVJ</a></li>
               </ul>
             </li>
         </ul>
@@ -206,6 +207,55 @@
           </div>
       </div>
   </section>
+
+
+  <footer class="footer">
+    <div class="container bottom_border">
+      <div class="row">
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Models/Urus.html">Urus</a></li>
+            <li><a href="../Model/Huracan_EVO.html">Huracan EVO</a></li>
+            <li><a href="../Model/Huracan_RWD.html">Huracan RWD</a></li>
+            <li><a href="../Model/Aventador_S.html">Aventador S</a></li>
+            <li><a href="../Model/Aventador_SVJ.html">Aventador SVJ</a></li>
+          </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Brand</h5>
+            <ul class="footer_ul_amrc">
+              <li><a href="../Brand/Ferruccio.html">Ferruccio Lamborghini</a></li>
+              <li><a href="../Brand/Marcello.html">Marcello Gandhini</a></li>
+              <li><a href="../Brand/Giampaollo.html">Giampaollo Dallara</a></li>
+              <li><a href="../Brand/Masterpieces.html">Masterpieces</a></li>
+              <li><a href="../Brand/Design.html">Design</a></li>
+            </ul>
+        </div>
+        <div class=" col-md-4">
+          <h5 class="headin5_amrc col_white_amrc pt2">Ownership</h5>
+          <ul class="footer_ul_amrc">
+            <li><a href="../Ownership/Dealer.html">Dealer Locator</a></li>
+            <li><a href="../Ownership/Service.html">Service Locator</a></li>
+            <li><a href="../Ownership/Center.html">Coullisin Center</a></li>
+            <li><a href="../Ownership/Sparepart.html">Sparepart</a></li>
+            <li><a href="../Ownership/Accessori.html">Accessori Originali</a></li>
+          </ul>
+        </div>  
+      </div>
+    </div>
+    <div class="container">
+      <ul class="foote_bottom_ul_amrc">
+      <li><a href="#">Models</a></li>
+      <li><a href="#">Brand</a></li>
+      <li><a href="#">Ownership</a></li>
+      <li><a href="#">Motorsport</a></li>
+      <li><a href="#">History</a></li>
+      </ul>
+      <p class="text-center">Copyright @2019 | Designed With by <a href="#">Gorosei Company</a></p>
+    </div>
+  </footer>
+
 
 </body>
 </html>
