--- a/Brand/Marcello.html
+++ b/Brand/Marcello.html
@@ -158,7 +158,7 @@
         <div class=" col-md-4">
           <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
           <ul class="footer_ul_amrc">
-            <li><a href="#">Urus</a></li>
+            <li><a href="../Models/Urus.html">Urus</a></li>
             <li><a href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
             <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
             <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
@@ -195,7 +195,7 @@
       <li><a href="#">Motorsport</a></li>
       <li><a href="#">History</a></li>
       </ul>
-      <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+      <p class="text-center">Copyright @2017 | Designed With by <a href="../Profil/Profil.html">Gorosei Company</a></p>
     </div>
   </footer>
 
