--- a/Brand/Masterpieces.html
+++ b/Brand/Masterpieces.html
@@ -121,7 +121,9 @@
     </div>
   </nav>
   
-  <img src="" alt="">
+  <img src="img/carbon/1.png" width="100%">
+  
+  <br><br>
 
   <div  class="container">
     <div class="col-md-8">
@@ -131,7 +133,7 @@
     </div>
   </div>
   
-  <img src="" alt="">
+  <img src="img/carbon/2.png" width="100%">
 
   <div class="container">
     <div class="col-md-9" style="margin: 0 auto; text-align: center;">
@@ -141,7 +143,12 @@
     </div>
   </div>
 
-  <br><br><br>
+  <br><br>
+  
+  <img src="img/carbon/3.png" width="100%">
+
+
+  <br>
 
   <div class="container">
     <div class="col-md-9" style="margin: 0 auto; text-align: center;">
@@ -149,6 +156,9 @@
       <p>The collaborations established with partners from the aeronautic world have led to the Sesto Elemento, a highly technological project which translated into practice the design partnership with the aerospace world, achieving unprecedented results in the usage of carbon fiber.</p>
     </div>
   </div>
+
+  <img src="img/carbon/4.png" width="100%"><br><br>
+
 
   <div  class="container">
     <div class="col-md-8">
@@ -159,6 +169,9 @@
       This groundbreaking material also weighs less (-28% and -65% versus Alcantara and leather respectively), and presents unique aesthetic features, such as a carbon fiber natural feel, a 3D effect, and a softness that no other material can offer, as you will immediately feel with a touch of your hand.</p>
     </div>
   </div>
+
+    <img src="img/carbon/5.png" width="100%">
+
   
 
   <footer class="footer">
@@ -167,7 +180,7 @@
         <div class=" col-md-4">
           <h5 class="headin5_amrc col_white_amrc pt2">Models</h5>
           <ul class="footer_ul_amrc">
-            <li><a href="#">Urus</a></li>
+            <li><a href="../Models/Urus.html">Urus</a></li>
             <li><a href="../Models/Huracan_EVO.html">Huracan EVO</a></li>
             <li><a href="../Models/Huracan_RWD.html">Huracan RWD</a></li>
             <li><a href="../Models/Aventador_S.html">Aventador S</a></li>
@@ -204,7 +217,7 @@
       <li><a href="#">Motorsport</a></li>
       <li><a href="#">History</a></li>
       </ul>
-      <p class="text-center">Copyright @2017 | Designed With by <a href="#">Fajar Company</a></p>
+      <p class="text-center">Copyright @2019 | Designed With by <a href="../Profil/Profil.html">Gorosei Company</a></p>
     </div>
   </footer>
 
