--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 			<li><a href="#">Motorsport</a></li>
 			<li><a href="#">History</a></li>
 			</ul>
-			<p class="text-center">Copyright @2017 | Designed With by <a href="Profil/Profil.html">Fajar Company</a></p>
+			<p class="text-center">Copyright @2019 | Designed With by <a href="Profil/Profil.html">Gorosei Company</a></p>
 		</div>
 	</footer>
 
